# Screw

./: Cargo.toml  LICENSE
screw-api/: Cargo.toml
screw-api-converters/: Cargo.toml
screw-api-converters/src/: json_converter.rs  lib.rs  xml_converter.rs
screw-api/src/: channel.rs  json_converter.rs  lib.rs  request.rs  response.rs  xml_converter.rs
screw-api/src/default_types/: empty_channel_extensions.rs  empty_request_content.rs  mod.rs  unreachable_response_content.rs
screw-api/src/json/: middleware.rs  mod.rs  stream_converter.rs
screw-api/src/xml/: middleware.rs  stream_converter.rs
screw-components/: Cargo.toml
screw-components/src/: dyn_fn.rs  dyn_result.rs  lib.rs
screw-core/: Cargo.toml
screw-core/src/: lib.rs  request.rs  responder_factory.rs  responders_factory.rs
screw-core/src/default_types/: default_converter.rs  default_fallback_handler.rs  mod.rs  not_found_fallback_handler.rs  through_converter.rs
screw-core/src/maps/: data_map.rs  mod.rs  shared_data_map.rs
screw-core/src/protocols/: web_socket.rs
screw-core/src/routing/: convert_handler.rs  converter.rs  handler.rs  middleware.rs  mod.rs  request.rs  request_response_converter.rs  response.rs  routable_responder.rs  route.rs  router.rs  router_builder.rs  routes.rs  routes_collection.rs  routes_collection_builder.rs
screw-core/src/routing/default_types/: default_converter.rs  default_fallback_handler.rs  mod.rs
screw-core/src/routing/routable_responder/: extensions.rs  mod.rs  routable_responder.rs  routable_responder_extensions.rs
screw-core/src/routing/router/: builder.rs  convert_handler.rs  mod.rs  request_converter.rs  request_response_converter.rs  response_converter.rs  route.rs  router.rs  router_builder.rs  routes_collection.rs  routes_collection_builder.rs  scoped_builder.rs  scoped_router_builder.rs
screw-core/src/routing/router/default_types/: default_converter.rs  default_not_found_handler.rs  mod.rs
screw-core/src/routing/router/http/: builder.rs  convert_handler.rs  converter.rs  mod.rs  route.rs
screw-core/src/routing/router/web_socket/: builder.rs  convert_handler.rs  converter.rs  mod.rs  route.rs
screw-core/src/server/: mod.rs  responder.rs  responder_factory.rs  responders_factory.rs  server_service.rs  session_service.rs
screw-ws/: Cargo.toml
screw-ws/src/: converter.rs  lib.rs  middleware.rs  request.rs  response.rs  stream_converter.rs  web_socket_converter.rs  web_socket_protocol.rs  web_socket_request.rs
screw-ws/src/default_types/: empty_content.rs  mod.rs
