[package]
name = "screw-api-converters"
version = "0.0.1"
edition = "2021"

[dependencies]
screw-core = { path = "../screw-core" }
screw-api = { path = "../screw-api" }
screw-ws = { path = "../screw-ws", optional = true }
hyper = { version = "0.14.9", features = ["http1", "http2"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.64", optional = true }
async-trait = { version = "0.1.50" }
futures = { version = "0.3.18" }
derive-error = { version = "0.0.5" }
tokio-tungstenite = { version = "0.16.0", optional = true }

[features]
default = ["json_converter", "ws"]
json_converter = ["serde_json"]
ws = ["screw-ws", "tokio-tungstenite"]