[package]
name = "screw-api-converters"
version = "0.0.1"
edition = "2021"

[dependencies]
screw-components = { path = "../screw-components" }
screw-core = { path = "../screw-core" }
screw-api = { path = "../screw-api" }
screw-ws = { path = "../screw-ws", optional = true }
hyper = { version = "0.14.26", features = ["http1", "http2"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
quick-xml = { version = "0.28.2", features = ["serialize"], optional = true }
async-trait = { version = "0.1.68" }
futures = { version = "0.3.28", optional = true }
derive-error = { version = "0.0.5" }
tokio-tungstenite = { version = "0.18.0", optional = true }

[features]
default = []
json_converter = ["serde_json"]
xml_converter = ["quick-xml"]
ws = ["screw-ws", "tokio-tungstenite", "futures", "screw-api/ws"]