[package]
name = "screw-api"
version = "0.0.1"
edition = "2021"

[dependencies]
screw-components = { path = "../screw-components" }
screw-core = { path = "../screw-core" }
hyper = { version = "0.14.26", features = ["http1", "http2"] }
tokio-tungstenite = { version = "0.18.0", optional = true }
serde = { version = "1.0.160", features = ["derive"] }
async-trait = { version = "0.1.68" }
futures = { version = "0.3.28", optional = true }

[features]
default = []
ws = ["tokio-tungstenite", "futures"]