[package]
name = "screw-core"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
tokio-tungstenite = { version = "0.16.0" }
hyper = { version = "0.14.9", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
url = { version = "2.2.2" }
async-trait = { version = "0.1.50" }
derive-error = { version = "0.0.5" }