[package]
name = "screw-ws"
version = "0.0.1"
edition = "2021"

[dependencies]
screw-components = { path = "../screw-components" }
screw-core = { path = "../screw-core" }
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = { version = "0.18.0" }
async-trait = { version = "0.1.68" }
futures-util = "0.3.28"

